tests/snapshots/examples_fixtures/aoc__2024__day01.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day01.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E011]: PRIVATE MEMBER

Cannot access private member `int_at`.

  --> examples/aoc/2024/day01.flx:14:6
   |
14 |     (Shared.int_at(nums, 0), Shared.int_at(nums, 1))
   |      ^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/aoc/2024/day01.flx:60:1
   |
60 | let all_pairs_data = read_lines("examples/aoc/2024/day01.txt") |> parse_pairs
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/aoc/2024/day01.flx:60:1
   |
60 | let all_pairs_data = read_lines("examples/aoc/2024/day01.txt") |> parse_pairs
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/aoc/2024/day01.flx:60:22
   |
60 | let all_pairs_data = read_lines("examples/aoc/2024/day01.txt") |> parse_pairs
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                      ----------------------------------------- expected () -> Unit, found () -> Unit with IO


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/aoc/2024/day01.flx:61:1
   |
61 | print(day01a(all_pairs_data))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/aoc/2024/day01.flx:62:1
   |
62 | print(day01b(all_pairs_data))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 6 errors.
== stdout ==
<not executed>
